# TelemetryTaco

./: .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  start.sh  stop.sh
.cursor/rules/: generalguidelines.mdc
.github/workflows/: cicd.yml
backend/: .bandit  Dockerfile  SETUP.md  bandit.yaml  check_db.py  manage.py  pyproject.toml  requirements.txt
backend/core/: api.py  celery.py  models.py  tasks.py
backend/core/migrations/: 0001_initial.py  0002_rename_core_event_distinc_idx_core_event_distinc_3cac99_idx_and_more.py
backend/telemetry_taco/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: InsightChart.tsx  LiveEventStream.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useEventStream.ts
sdk/: telemetry_taco.py
