[tool.poetry]
name = "telemetry-taco-backend"
version = "0.1.0"
description = "Backend for TelemetryTaco"
authors = ["TelemetryTaco Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.0"
django-ninja = "^1.0.0"
celery = "^5.3.0"
redis = "^5.0.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}
django-cors-headers = "^4.3.0"
django-environ = "^0.11.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

